--- a/vignettes/example_using_archeR.Rmd
+++ b/vignettes/example_using_archeR.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(archeR)
+#reticulate::source_python("inst/py/perform_nmf.py")
 ```
 
 ## Fetch data
@@ -38,7 +39,7 @@ positions <- setdiff(seq(-100,100),c(0))
 sinuc <- c('A', 'C', 'G', 'T')
 # Randomize the sequence order
 changed_order <- sample.int(nSeqs, nSeqs, replace = FALSE)
-tss.seqs <- tss.seqs_o[ , changed_order]
+#tss.seqs <- tss.seqs_o[ , changed_order]
 
 ```
 
