--- a/vignettes/example_using_archeR.Rmd
+++ b/vignettes/example_using_archeR.Rmd
@@ -181,17 +181,17 @@ cat("done\n")
 # filename <- file.path(paths_list$synthetic_data_results_path, "architectures-as-patterns-pyNMF-non-sparsified.pdf")
 # viz_all_factors_as_seqlogo(featuresMatrix)
 #
-viz_all_factors_in_combined_heatmaps_seqlogos(featuresMatrix, add_pseudo_counts = F)
+viz_all_factors_in_combined_heatmaps_seqlogos(featuresMatrix, add_pseudo_counts = F, position_labels = positions)
 ```
 
 
 
 ```{r Cluster-sequences, echo=FALSE, warning=FALSE, message=FALSE}
 
-final_nClust <- choose_clusters(t(samplesMatrix), clustMethod = "kmeans", nCluster_vals_test = seq(3,20))
+final_nClust <- choose_clusters(samplesMatrix, clustMethod = "kmeans", nCluster_vals_test = seq(3,20))
 cat("Number of clusters: ", final_nClust, "\n")
 
-clustering_sol <- get_clusters(t(samplesMatrix), clustMethod = "kmeans", final_nClust)
+clustering_sol <- get_clusters(samplesMatrix, clustMethod = "kmeans", final_nClust)
 
 ```
 
