--- a/vignettes/example_using_archR.Rmd
+++ b/vignettes/example_using_archR.Rmd
@@ -12,12 +12,13 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
+  tidy = "styler",
   collapse = TRUE,
   comment = "#>"
 )
 ```
 
-```{r setup}
+```{r setup, echo=TRUE}
 library(archR)
 reticulate::source_python(system.file("python/perform_nmf.py",
                                             package="archR",
@@ -26,32 +27,32 @@ reticulate::source_python(system.file("python/perform_nmf.py",
 
 ```
 
-## Fetch data
+# Load data
 
-```{r sinuc-profiles-synthetic-dataset-2, echo=FALSE}
+```{r load-example-data, echo=FALSE}
 
-# Simply get filename and create the feature matrix
-# creating data matrix from FASTA file
+# Ceation of data matrix from FASTA file
 inputFastaFilename <- system.file("extdata", "example_data.fa", package = "archR", mustWork = TRUE)
 #inputFastaFilename <- file.path("inst/extdata", 'example_data.fa') 
-tss.seqs_o <- prepare_data_from_FASTA(inputFastaFilename)
-nSeqs <- ncol(tss.seqs_o)
+tssSeqsOriginal <- prepare_data_from_FASTA(inputFastaFilename)
+nSeqs <- ncol(tssSeqsOriginal)
 positions <- setdiff(seq(-100,100),c(0))
 sinuc <- c('A', 'C', 'G', 'T')
 # Randomize the sequence order
-changed_order <- sample.int(nSeqs, nSeqs, replace = FALSE)
-tss.seqs <- tss.seqs_o[ , changed_order]
+changedOrder <- sample.int(nSeqs, nSeqs, replace = FALSE)
+tssSeqs <- tssSeqsOriginal[ , changedOrder]
 
 ```
 
+# Represent original set of sequences as an image
 
 ```{r plot-seqs, echo=FALSE}
 # Represent sequences as heatmap
-represent_matrix_of_acgt(tss.seqs, position_labels = positions)
+represent_matrix_of_acgt(tssSeqs, position_labels = positions)
 
 ```
 
-## Run NMF and model selection
+# Run model selection for NMF
 
 As is obvious, we need to fix the optimum number of factors before proceding to factorize. 
 Additionally, as can be noted from the objective function of NMF (see equation above), some parameters determine the quality of factorization. 
@@ -68,9 +69,6 @@ $K = \{3, 30\}$
 $\alpha = 2^{-6,\ldots,3}$
 
 ```{r pyNMF-on-data, echo=FALSE, warning=FALSE, message=FALSE}
-## Random ordered data
-data_mat <- tss.seqs
-##
 param_ranges <- NULL
 param_ranges$alphaBase <- 0
 param_ranges$alphaPow <- 0
@@ -82,7 +80,7 @@ cat("Choosing optimal K\n")
 # Fix number of patterns (K)
 start <- Sys.time()
 chooseK_logfilename <- file.path(paste0('pyNMF-synthetic-data2-worker-output-chooseK-',                     paste(Sys.Date(), format(Sys.time(), "%X"), sep='-'), '.txt'))
-model_selectK <- invisible(cv_model_select_pyNMF(X=tss.seqs, 
+model_selectK <- invisible(cv_model_select_pyNMF(X=tssSeqs, 
                                                  param_ranges=param_ranges, 
                                                  kFolds=kFolds, 
                                                  parallel=FALSE, 
@@ -108,15 +106,15 @@ param_ranges$alphaPow <- seq(-6, 3)
 param_ranges$k_vals <- best_K
 seed_val <- 10208090
 start <- Sys.time()
-chooseAlpha_logfilename <- file.path(paste0('pyNMF-synthetic-data2-worker-output-chooseAlpha-',                                                               paste(Sys.Date(), format(Sys.time(), "%X"), sep='-'), '.txt')
+chooseAlpha_logfilename <- file.path(paste0('pyNMF-synthetic-data2-worker-output-chooseAlpha-',                                                               paste(Sys.Date(), format(Sys.time(), "%X"), sep = '-'), '.txt')
 )
-model_selectAlpha <- invisible(cv_model_select_pyNMF(X=tss.seqs,
-                                                     param_ranges=param_ranges,
-                                                     kFolds=kFolds,
-                                                     parallel=FALSE,
-                                                     nCores=nCoresUse,
-                                                     seed=seed_val,
-                                                     logfile=chooseAlpha_logfilename,
+model_selectAlpha <- invisible(cv_model_select_pyNMF(X = tssSeqs,
+                                                     param_ranges = param_ranges,
+                                                     kFolds = kFolds,
+                                                     parallel = FALSE,
+                                                     nCores = nCoresUse,
+                                                     seed_val = seed_val,
+                                                     logfile = chooseAlpha_logfilename,
                                                      set_verbose = 0
 )
 )
@@ -133,11 +131,13 @@ print(Q2vsAlpha)
 # 
 ```
 
+# Perform NMF on complete data
+
 ```{r final-nmf-on-data, echo=FALSE}
 cat("Performing NMF on the complete data...")
 seed_val <- 10208090
 start <- Sys.time()
-result <- perform_nmf_func(tss.seqs, 
+result <- perform_nmf_func(tssSeqs, 
                               nPatterns = as.integer(best_K),
                               nIter = as.integer(1000),
                               givenAlpha = best_alpha,
@@ -157,7 +157,7 @@ samplesMatrix <- result[[2]]
 
 ```
 
-
+## Possibility of sparsification
 
 ```{r sparsify-feature-matrix, fig.height=2, fig.width=25, echo=FALSE, message=FALSE, warning=FALSE}
 cat(paste0("Number of factors: ", best_K, "\n"))
@@ -169,19 +169,20 @@ cat("done\n")
 ```
 
 
-# Combined plots -- Non-sparsified Features Matrix
+# Heatmap and sequence logos -- combined plots 
+## The non-sparsified features matrix
 ```{r combined-plot-patterns-as-PWMs-non-sparse, fig.height=5, fig.width=25, echo=FALSE, warning=FALSE, message=FALSE}
 # Plot here and also save as PDF -- both done in the function
-# filename_heatmaps <- file.path(paths_list$synthetic_data_results_path, "architectures-as-patterns-pyNMF-sparsified-heatmaps.pdf")
+# filename_heatmaps <- "architectures-as-patterns-pyNMF-sparsified-heatmaps.pdf"
 # viz_all_factors_as_heatmap(featuresMatrix)
 # #
-# filename <- file.path(paths_list$synthetic_data_results_path, "architectures-as-patterns-pyNMF-non-sparsified.pdf")
+# filename <- "architectures-as-patterns-pyNMF-non-sparsified.pdf"
 # viz_all_factors_as_seqlogo(featuresMatrix)
 #
 viz_all_factors_in_combined_heatmaps_seqlogos(featuresMatrix, add_pseudo_counts = F, position_labels = positions)
 ```
 
-
+# Cluster the sequences
 
 ```{r Cluster-sequences, echo=FALSE, warning=FALSE, message=FALSE}
 
@@ -192,27 +193,20 @@ clustering_sol <- get_clusters(samplesMatrix, clustMethod = "kmeans", final_nClu
 
 ```
 
+# Represent clustered sequences as an image
 
 ```{r plot-seqs-post-nmf, fig.align = "center", echo=FALSE}
-# Represent sequences as heatmap
-# represent_matrix_of_acgt(tss.seqs, positions = positions, plot.title = "Given")
-# represent_matrix_of_acgt(tss.seqs[ , ord_hm2$colInd], positions, plot.title = "After NMF")
-# represent_matrix_of_acgt(tss.seqs, positions = positions, plot.title = "Given")
-# # represent_matrix_of_acgt(tss.seqs[ , ss_hclust], positions = positions, plot.title = "hclust")
-# # represent_matrix_of_acgt(tss.seqs[ , ord_hm2$colInd], positions, plot.title = "ord_hm2")
-represent_matrix_of_acgt(tss.seqs[ , unlist(clustering_sol$reordering_idx)], positions, plot.title = "NMF+kmeans")
 
+represent_matrix_of_acgt(tssSeqs[ , unlist(clustering_sol$reordering_idx)], positions, plot.title = "NMF+kmeans")
 
 ```
 
 # Report architectures characteristic of clusters
 
 ```{r report-arch, fig.height=7, fig.width=25, echo=FALSE, warning=FALSE, message=FALSE}
-#source(file.path(paths_list$src_path, "plot_arch_for_clusters.R"))
 
-plot_arch_for_clusters(samplesMatrix, featuresMatrix, final_nClust, clustering_sol, tss.seqs, positions)
+plot_arch_for_clusters(samplesMatrix, featuresMatrix, final_nClust, clustering_sol, tssSeqs, positions)
 
-# sprintf("Time taken from start to end: %s", format(Sys.time() - processStart, digits = 5, trim = F))
 ```
 
 # Conclusion
