--- a/vignettes/archR_example.Rmd
+++ b/vignettes/archR_example.Rmd
@@ -1,9 +1,12 @@
 ---
 title: "Example usage archR"
-author: "snikumbh"
-date: "`r Sys.time()`"
+author: "Sarvesh Nikumbh"
+date: "`r Sys.Date()`"
 output:
-  pdf_document
+  pdf_document:
+    fig_caption: yes
+    number_sections: yes
+    toc: yes
 vignette: >
   %\VignetteIndexEntry{ExampleWitharchR}
   %\VignetteEngine{knitr::rmarkdown}
